--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.practise.note">
+
     <!-- the permission of using camera -->
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -27,8 +28,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NoteNew"></activity>
-        <activity android:name=".NoteShow"></activity>
+        <activity android:name=".NoteNew" />
+        <activity android:name=".NoteShow" />
+        <activity android:name=".NoteEdit"></activity>
     </application>
 
 </manifest>
