--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <!-- reading sd -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
     <application
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
@@ -27,11 +28,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NoteNew"
-            android:windowSoftInputMode="adjustResize|stateHidden"/>
+        <activity
+            android:name=".NoteNew"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity android:name=".NoteShow" />
-        <activity android:name=".NoteEdit"
-            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
+        <activity
+            android:name=".NoteEdit"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
     </application>
 
 </manifest>
